--- a/basic-resume/index.html
+++ b/basic-resume/index.html
@@ -3,20 +3,21 @@
 
 <head>
 <title> Brendan Miller Resume</title>
-<link> rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<h1>Brendan Miller</h1>
 	<b>Deputy Managing Editor</b>
 	<br>
-	<img
+	
 
 	<ul>
-		<li><a href+"mailto:bmille66@terpmail.umd.edu" target="_blank">bmille66@terpmail.umd.edu</a>
-		<li><a href="https://www.linkedin.com/in/brendan-miller-9a0a78143/" target="_blank"> LinkedIn </a><li>
-		<li><a href="https://mobile.twitter.com/brendanmiller19" target="_blank"> Twitter </a><li>
-		<li><a href="https://github.com/Bmille66" target="_blank" GitHub </a><li>
+		<li><a href="mailto:bmille66@terpmail.umd.edu" target="_blank">bmille66@terpmail.umd.edu</a></li>
+		<li><a href="https://www.linkedin.com/in/brendan-miller-9a0a78143/" target="_blank"> LinkedIn </a></li>
+		<li><a href="https://mobile.twitter.com/brendanmiller19" target="_blank"> Twitter </a></li>
+		<li><a href="https://github.com/Bmille66" target="_blank"> GitHub </a></li>
+	</ul>
 
 	<p>Multi-media journalism student at the University of Maryland</p>
 
@@ -42,18 +43,18 @@
 		<ul>
 			<li>Major:multimedia journalism</li>
 			<li>GPA: 3.3</li>
-			<May 2022>
+			<li>May 2022</li>
 		</ul>
 
-	<h2>Skills</>
+	<h2>Skills</h2>
 		<ul>
 			<li>Writing</li>
 			<li>Research</li>
 			<li>Creativity</li>
 			<li>Communitcation</li>
-			<Microsoft Word</li>
-			<Microsoft Excel</li>
-
+			<li>Microsoft Word</li>
+			<li>Microsoft Excel</li>
+		</ul>
 
 </body>
 
